upgrade and docs
